fixtures/frontend/milestone-2/invalid/unknown-imported-names/main.aivi
use aivi.network (
    http
    mailbox
)

val importedHttp = http
